<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:id="@+id/fragment_home_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="10dp"
        app:strokeColor="@color/black"
        app:strokeWidth="1.5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_the_scanbite_application"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgScanBite"
                android:layout_width="match_parent"
                android:layout_height="122dp"
                android:src="@drawable/scanbite_logo" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/description"
                android:textColor="@color/black"
                android:background="@color/green"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgScanner"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="-9dp"
                android:src="@drawable/scaner" />

            <TextView
                android:id="@+id/tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developed_by"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvChristian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chritian_tichler"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEthan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ethan_batch"
                android:paddingLeft="120dp"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLalit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lalit_bhattarai"
                android:textColor="@color/black"
                android:paddingLeft="205dp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvConestoga"
                android:background="@color/green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/students_at_conestoga_college"
                android:layout_margin="15dp"
                android:textColor="@color/blue"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>